// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scopeId compiler support should push scopeId for hoisted nodes 1`] = `
"import { createVNode as _createVNode, createBlock as _createBlock, openBlock as _openBlock, withScopeId as _withScopeId, pushScopeId as _pushScopeId, popScopeId as _popScopeId } from \\"vue\\"
const _withId = _withScopeId(\\"test\\")

_pushScopeId(\\"test\\")
const _hoisted_1 = _createVNode(\\"div\\", null, \\"hello\\")
const _hoisted_2 = _createVNode(\\"div\\", null, \\"world\\")
_popScopeId()

export const render = _withId(function render() {
  const _ctx = this
  return (_openBlock(), _createBlock(\\"div\\", null, [
    _hoisted_1,
    _hoisted_2
  ]))
})"
`;

exports[`scopeId compiler support should wrap default slot 1`] = `
"import { createVNode as _createVNode, resolveComponent as _resolveComponent, createBlock as _createBlock, openBlock as _openBlock, withScopeId as _withScopeId } from \\"vue\\"
const _withId = _withScopeId(\\"test\\")

export const render = _withId(function render() {
  const _ctx = this
  const _component_Child = _resolveComponent(\\"Child\\")

  return (_openBlock(), _createBlock(_component_Child, null, {
    default: _withId(() => [
      _createVNode(\\"div\\")
    ]),
    _compiled: true
  }))
})"
`;

exports[`scopeId compiler support should wrap dynamic slots 1`] = `
"import { createVNode as _createVNode, resolveComponent as _resolveComponent, renderList as _renderList, createSlots as _createSlots, createBlock as _createBlock, openBlock as _openBlock, withScopeId as _withScopeId } from \\"vue\\"
const _withId = _withScopeId(\\"test\\")

export const render = _withId(function render() {
  const _ctx = this
  const _component_Child = _resolveComponent(\\"Child\\")

  return (_openBlock(), _createBlock(_component_Child, null, _createSlots({ _compiled: true }, [
    (_ctx.ok)
      ? {
          name: \\"foo\\",
          fn: _withId(() => [
            _createVNode(\\"div\\")
          ])
        }
      : undefined,
    _renderList(_ctx.list, (i) => {
      return {
        name: i,
        fn: _withId(() => [
          _createVNode(\\"div\\")
        ])
      }
    })
  ]), 512 /* DYNAMIC_SLOTS */))
})"
`;

exports[`scopeId compiler support should wrap named slots 1`] = `
"import { toDisplayString as _toDisplayString, createTextVNode as _createTextVNode, createVNode as _createVNode, resolveComponent as _resolveComponent, createBlock as _createBlock, openBlock as _openBlock, withScopeId as _withScopeId } from \\"vue\\"
const _withId = _withScopeId(\\"test\\")

export const render = _withId(function render() {
  const _ctx = this
  const _component_Child = _resolveComponent(\\"Child\\")

  return (_openBlock(), _createBlock(_component_Child, null, {
    foo: _withId(({ msg }) => [
      _createTextVNode(_toDisplayString(msg), 1 /* TEXT */)
    ]),
    bar: _withId(() => [
      _createVNode(\\"div\\")
    ]),
    _compiled: true
  }))
})"
`;

exports[`scopeId compiler support should wrap render function 1`] = `
"import { createVNode as _createVNode, createBlock as _createBlock, openBlock as _openBlock, withScopeId as _withScopeId } from \\"vue\\"
const _withId = _withScopeId(\\"test\\")

export const render = _withId(function render() {
  const _ctx = this
  return (_openBlock(), _createBlock(\\"div\\"))
})"
`;
